Add DarkMode and fonts

--- a/Dima.Web/Layouts/HeadlessLayout.razor
+++ b/Dima.Web/Layouts/HeadlessLayout.razor
@@ -1,6 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using MudBlazor.Utilities
+@inherits LayoutComponentBase
 
-<MudThemeProvider />
+<MudThemeProvider Theme="Configuration.Theme" />
 <MudSnackbarProvider />
 
 <MudLayout>
