--- a/Dima.Web/Layouts/MainLayout.razor
+++ b/Dima.Web/Layouts/MainLayout.razor
@@ -7,11 +7,15 @@
     <Authorized>
         <MudLayout>
             <MudAppBar>
+                <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="ToggleDrawer" />
                 Dima
                 <MudSpacer />
                 <MudText Typo="Typo.caption">@context.User.Identity?.Name</MudText>
-                <MudSwitch @bind-Value="_isDarkMode" />
+                <MudToggleIconButton T="bool" Color="Color.Inherit" @bind-Toggled="@_isDarkMode" Class="ma-4" Icon="@Icons.TwoTone.LightMode" ToggledIcon="@Icons.Material.Filled.DarkMode" ToggledColor="@Color.Inherit" />
             </MudAppBar>
+            <MudDrawer @bind-Open="_isDrawerOpened">
+                <NavMenu />
+            </MudDrawer>
             <MudMainContent>
                 <MudContainer>
                     @Body
@@ -26,6 +30,7 @@
 
 @code {
     private bool _isDarkMode = true;
+    private bool _isDrawerOpened = true;
     private MudThemeProvider _mudThemeProvider = null!;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -44,4 +49,5 @@
         StateHasChanged();
         return Task.CompletedTask;
     }
+    private void ToggleDrawer() => _isDrawerOpened = !_isDrawerOpened;
 }
