--- a/Dima.Web/Components/NavMenu.razor
+++ b/Dima.Web/Components/NavMenu.razor
@@ -4,9 +4,9 @@
 
 <MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
-    <MudNavLink Href="/lancamentos/historico">Histórico</MudNavLink>
-    <MudNavLink Href="/categorias">Categorias</MudNavLink>
-    <MudNavLink Href="/categorias/premium">Categorias</MudNavLink>
-    <MudNavLink Href="/premium">Premium</MudNavLink>
+    <MudNavLink Href="/lancamentos/historico" Match="NavLinkMatch.All">Histórico</MudNavLink>
+    <MudNavLink Href="/categorias" Match="NavLinkMatch.All">Categorias</MudNavLink>
+    <MudNavLink Href="/categorias/premium" Match="NavLinkMatch.All">Categorias</MudNavLink>
+    <MudNavLink Href="/premium" Match="NavLinkMatch.All">Premium</MudNavLink>
     <MudNavLink Href="/sair">Sair</MudNavLink>
 </MudNavMenu>
