Realizado Checkout parte 4

--- a/Dima.Web/Layouts/MainLayout.razor
+++ b/Dima.Web/Layouts/MainLayout.razor
@@ -35,7 +35,7 @@
 </AuthorizeView>
 
 @code {
-    private bool _isDarkMode = true;
+    private bool _isDarkMode = false;
     private bool _isDrawerOpened = true;
     private MudThemeProvider _mudThemeProvider = null!;
 
