--- a/Dima.Web/Pages/Orders/Checkout.razor
+++ b/Dima.Web/Pages/Orders/Checkout.razor
@@ -1,6 +1,45 @@
-@page "/Checkout"
-<h3>Checkout</h3>
+@page "/checkout/{productSlug}"
+@inherits CheckoutPage
 
-@code {
-    
-}
+<MudContainer Class="mt-16" MaxWidth="MaxWidth.Medium">
+    <MudText Typo="Typo.h3" Align="Align.Center" GutterBottom="true">Checkout</MudText>
+    <MudGrid Class="mt-16" Justify="Justify.Center">
+        <MudItem xs="12" sm="12" md="10" lg="8" xl="6" xxl="5">
+            <MudPaper Class="d-flex flex-column" Outlined="true">
+                <MudList>
+                    <MudListItem Icon="@Icons.Material.Filled.Star">
+                        <div class="d-flex">
+                            <MudText>@Product?.Title</MudText>
+                            <MudText Inline="true" Class="ml-auto">
+                                @(Product?.Price.ToString("C"))
+                            </MudText>
+                        </div>
+                    </MudListItem>
+                    <MudDivider/>
+                    VOUCHER
+                </MudList>
+                <div class="mt-auto">
+                    <MudDivider/>
+                    <div class="d-flex pa-4">
+                        <MudText>Total:</MudText>
+                        <MudText Class="ml-auto">
+                            <b>
+                                @(Total.ToString("C"))
+                            </b>
+                        </MudText>
+                    </div>
+                </div>
+            </MudPaper>
+            <MudButton
+                Variant="Variant.Filled"
+                Color="Color.Primary"
+                Disabled="@(!IsValid)"
+                DisableElevation="true"
+                Size="Size.Large"
+                Class="mt-6"
+                FullWidth="true">
+                FINALIZAR PEDIDO
+            </MudButton>
+        </MudItem>
+    </MudGrid>
+</MudContainer>
